--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.7.1",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
