--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "typewriter-effect": "^2.19.0"
