--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-markdown": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "rehype-raw": "^6.1.1",
