--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-markdown": "^8.0.5",
+    "react-pro-sidebar": "^1.0.0",
     "react-responsive-carousel": "^3.2.23",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
